<resources>
    <string name="app_name">TicTacToe</string>
    <string name="name">Created by Vahan at 16.04.17</string>
    <string name="action_settings">Settings</string>
    <string name="_1"></string>
    <string name="_2"></string>
    <string name="_3"></string>
    <string name="_4"></string>
    <string name="_5"></string>
    <string name="_6"></string>
    <string name="_7"></string>
    <string name="_8"></string>
    <string name="_9"></string>
    <string name="item">New Game</string>
    <string name="tictactoe">TicTacToe</string>
    <string name="win_text">You won.Click here to start again.</string>
    <string name="lost_text">You lost.Click here to start again.</string>
    <string name="draw_text">It\'s a draw.Click here to start again.</string>
    <string name="start_text">Click here to start.</string>
</resources>
