<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/pic"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.vahan.tictactoe.MainActivity"
    tools:showIn="@layout/activity_main">

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:paddingTop="100dp">
        <!--android:layout_below="@+id/text_layout">-->

        <TableRow

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/_1"
                android:textColor="@color/color"
                android:textSize="30sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/_2"
                android:textColor="@color/color"
                android:textSize="30sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimaryDark"
                android:paddingRight="8dp"
                android:text="@string/_3"
                android:textColor="@color/color"
                android:textSize="30sp"
                tools:ignore="ButtonStyle,RtlHardcoded,RtlSymmetry" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/_4"
                android:textColor="@color/color"
                android:textSize="30sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button5"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/_5"
                android:textColor="@color/color"
                android:textSize="30sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimaryDark"
                android:paddingRight="8dp"
                android:text="@string/_6"
                android:textAllCaps="false"
                android:textColor="@color/color"
                android:textSize="30sp"
                tools:ignore="ButtonStyle,RtlHardcoded,RtlSymmetry" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/_7"
                android:textColor="@color/color"
                android:textSize="30sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button8"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/_8"
                android:textColor="@color/color"
                android:textSize="30sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button9"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimaryDark"
                android:paddingRight="8dp"
                android:text="@string/_9"
                android:textColor="@color/color"
                android:textSize="30sp"
                tools:ignore="ButtonStyle,RtlHardcoded,RtlSymmetry" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:onClick="clickToPlay"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="-27dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="80dp"
            android:textAlignment="center"
            android:textColor="@color/color"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>
